--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -1,1 +1,5 @@
-:root: ;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+@import'normalize.css';
+@import"base/_global.css";
+@import "modules/_large-hero.css";
+
